src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java

  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_setCutoffDistance(OpenMM_AmoebaGKCavitationForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_setCutoffDistance(
      PointerByReference target, double distance);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGKCavitationForce_updateParametersInContext(OpenMM_AmoebaGKCavitationForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_AmoebaGKCavitationForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
  /**
   * AmoebaGeneralizedKirkwoodForce<br>
   * Original signature : <code>
   * OpenMM_AmoebaGeneralizedKirkwoodForce* OpenMM_AmoebaGeneralizedKirkwoodForce_create()</code>
   */
  public static native PointerByReference OpenMM_AmoebaGeneralizedKirkwoodForce_create();
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_destroy(
      PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_getNumParticles(
      PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(OpenMM_AmoebaGeneralizedKirkwoodForce*, double, double, double)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle(
      PointerByReference target, double charge, double radius, double scalingFactor);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle_1(OpenMM_AmoebaGeneralizedKirkwoodForce*, double, double, double, double, double)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_addParticle_1(
      PointerByReference target,
      double charge,
      double radius,
      double scalingFactor,
      double descreenRadius,
      double neckFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleBuffer charge,
      DoubleBuffer radius,
      DoubleBuffer scalingFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(
      PointerByReference target,
      int index,
      DoubleByReference charge,
      DoubleByReference radius,
      DoubleByReference scalingFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters_1(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters_1(
      PointerByReference target,
      int index,
      DoubleBuffer charge,
      DoubleBuffer radius,
      DoubleBuffer scalingFactor,
      DoubleBuffer descreenRadius,
      DoubleBuffer neckFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters_1(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters_1(
      PointerByReference target,
      int index,
      DoubleByReference charge,
      DoubleByReference radius,
      DoubleByReference scalingFactor,
      DoubleByReference descreenRadius,
      DoubleByReference neckFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(
      PointerByReference target, int index, double charge, double radius, double scalingFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters_1(OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double, double, double, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters_1(
      PointerByReference target,
      int index,
      double charge,
      double radius,
      double scalingFactor,
      double descreenRadius,
      double neckFactor);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(
      PointerByReference target, double dielectric);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(
      PointerByReference target, double dielectric);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGeneralizedKirkwoodForce_getTanhRescaling(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_getTanhRescaling(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setTanhRescaling(OpenMM_AmoebaGeneralizedKirkwoodForce*, int)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setTanhRescaling(
      PointerByReference target, int tanhRescale);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(OpenMM_AmoebaGeneralizedKirkwoodForce*, int)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(
      PointerByReference target, int includeCavityTerm);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(
      PointerByReference target, double probeRadius);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(
      PointerByReference target, double surfaceAreaFactor);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(OpenMM_AmoebaGeneralizedKirkwoodForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaGeneralizedKirkwoodForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(
      PointerByReference target);
  /**
   * Original signature : <code>OpenMM_AmoebaMultipoleForce* OpenMM_AmoebaMultipoleForce_create()
   * </code>
   */
  public static native PointerByReference OpenMM_AmoebaMultipoleForce_create();
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_destroy(OpenMM_AmoebaMultipoleForce*)</code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_destroy(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaMultipoleForce_getNumMultipoles(const OpenMM_AmoebaMultipoleForce*)</code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_getNumMultipoles(PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaMultipoleForce_NonbondedMethod OpenMM_AmoebaMultipoleForce_getNonbondedMethod(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_getNonbondedMethod(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_NonbondedMethod)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(
      PointerByReference target, int method);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaMultipoleForce_PolarizationType OpenMM_AmoebaMultipoleForce_getPolarizationType(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_getPolarizationType(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setPolarizationType(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_PolarizationType)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setPolarizationType(
      PointerByReference target, int type);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaMultipoleForce_getCutoffDistance(const OpenMM_AmoebaMultipoleForce*)</code>
   */
  public static native double OpenMM_AmoebaMultipoleForce_getCutoffDistance(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setCutoffDistance(OpenMM_AmoebaMultipoleForce*, double)</code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setCutoffDistance(
      PointerByReference target, double distance);
